[package]
name = "k8s-network-policy-ebpf-controller-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
k8s-network-policy-ebpf-controller-common = { path = "../k8s-network-policy-ebpf-controller-common" }

[[bin]]
name = "k8s-network-policy-ebpf-controller"
path = "src/main.rs"

[profile.release]
panic = "abort"

[workspace]
members = []
