[package]
name = "k8s-network-policy-ebpf-controller"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
k8s-network-policy-ebpf-controller-common = { path = "../k8s-network-policy-ebpf-controller-common", features=["user"] }
anyhow = "1.0.42"

log = "0.4"
simplelog = "0.11"
structopt = { version = "0.3" }
tokio = { version = "1.5.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "k8s-network-policy-ebpf-controller"
path = "src/main.rs"
