[package]
name = "networkpolicy-controller-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
networkpolicy-controller-common = { path = "../networkpolicy-controller-common" }
memoffset = "0.6"

[[bin]]
name = "networkpolicy-controller"
path = "src/main.rs"

[profile.release]
panic = "abort"

[workspace]
members = []